styles/globals.css
/* ... */
.dragon {
  background: var(--color-dragon);
}

.flying {
  background-color: var(--color-flying);
}

.ground {
  background-color: var(--color-ground);
}

.steel {
  background-color: var(--color-steel);
}

.psychic {
  background-color: var(--color-psychic);
}

.ice {
  background-color: var(--color-ice);
}

.ghost {
  background-color: var(--color-ghost);
}

.normal {
  background-color: var(--color-normal);
}

.rock {
  background-color: var(--color-rock);
}

.electric {
  background-color: var(--color-electric);
}

.fighting {
  background-color: var(--color-fighting);
}

.fairy {
  background-color: var(--color-fairy);
}

.dark {
  background-color: var(--color-dark);
}



.water-text {
  background-color: var(--color-water-text);
}

.grass-text {
  background-color: var(--color-grass-text);
}

.poison-text {
  background-color: var(--color-poison-text);
}

.fire-text {
  background-color: var(--color-fire-text);
}

.bug-text {
  background-color: var(--color-bug-text);
}

.dragon-text {
  background: var(--color-dragon-text);
}

.flying-text {
  background-color: var(--color-flying-text);
}

.ground-text {
  background-color: var(--color-ground-text);
}

.steel-text {
  background-color: var(--color-steel-text);
}

.psychic-text {
  background-color: var(--color-psychic-text);
}

.ice-text {
  background-color: var(--color-ice-text);
}

.ghost-text {
  background-color: var(--color-ghost-text);
}

.normal-text {
  background-color: var(--color-normal-text);
}

.rock-text {
  background-color: var(--color-rock-text);
}

.electric-text {
  background-color: var(--color-electric-text);
}

.fighting-text {
  background-color: var(--color-fighting-text);
}

.fairy-text {
  background-color: var(--color-fairy-text);
}

.dark-text {
  background-color: var(--color-dark-text);
}

/* Stats */

.hp {
  background-color: var(--color-hp);
}

.attack {
  background-color: var(--color-attack);
}

.defense {
  background-color: var(--color-defense);
}

.special-attack {
  background-color: var(--color-sp-attack);
}

.special-defense {
  background-color: var(--color-sp-defense);
}

.speed {
  background-color: var(--color-speed);
}

.load-more {
  font-size: 1.25rem;
  padding: 15px 0;
  margin-top: 30px;
  margin-bottom: 150px;
  border-radius: 1.6rem;
  font-weight: 700;
  box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
  cursor: pointer;
  box-sizing: border-box;
  width: 64vw;
  min-width: 230px;
  max-width: 300px;
}

.shadow {
  box-shadow: 0 10px 16px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
}


@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

@keyframes fadeOut {
  0% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

@keyframes dropDown {
  0% {
    opacity: 0;
    transform: translateY(-100%);
  }

  100% {
    opacity: 1;
    transform: translateY(0%);
  }
}

@keyframes statSlideIn {
  0% {
    max-width: 5%;
  }

  100% {
    max-width: 100%;
  }
}

::-webkit-scrollbar {
  width: 0px;
  background: transparent;
}

.pokeball-icon-container {
  position: relative;
}

.pokeball-icon {
  position: absolute;
  width: 170px;
  opacity: 0.5;
  top: 12px;
  right: -85px;
}

.sprite-container {
  width: 130px;
  height: 130px;
  z-index: 1;
  margin-top: 34px;
}

.pokemon-sprite {
  /* image-rendering: pixelated; */
  width: 130px;
}

.pokemon-card h3 {
  font-size: 1.6rem;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 25px;
}

.pokemon-card h3.japanese-text {
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
}

.modal-background {
  width: 100vw;
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.7);
  position: fixed;
  animation: fadeIn 0.5s ease-in-out;
  top: 0;
  left: 0;
  z-index: 10;
  display: flex;
  justify-content: center;
}

.modal-container {
  height: calc(100vh - 70px);
  /* max-height: 615px; */
  max-height: 850px; 
  /* width: 65%; */
  width: 85%;
  background-color: #e3e3e3;
  border-radius: 1rem;
  padding: 20px;
  position: relative;
  display: flex;
  animation: dropDown 0.4s ease-in-out;
  overflow-y: scroll;
  /* max-width: 960px; */
  max-width: 1200px;
  margin: auto;
}

.move-modal-container {
  height: calc(100vh - 70px);
  /* max-height: 615px; */
  max-height: 500px;
  /* width: 65%; */
  /* width: 35%; */
  background-color: rgb(0,0,0,0.7);
  border-radius: 1rem;
  padding: 20px;
  position: relative;
  /* display: flex; */
  animation: fadeIn 0.5s ease-in-out;
  overflow-y: scroll;
  /* max-width: 960px; */
  max-width: 1200px;
  margin: auto;
}

.modal-close {
  position: absolute;
  top: 5px;
  right: 22px;
  border: none;
  background-color: transparent;
  animation: fadeIn 0.5s ease-in-out;
  cursor: pointer;
  font-size: 3rem;
  display: none;
}

.info-box-sprite {
  background-color: rgba(0, 0, 0, 0.2);
  min-width: 250px;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
  box-sizing: border-box;
  padding: 15px;
  position: relative;
  margin: auto;
}

.info-box-sprite h4 {
  font-size: 1.7rem;
}

.info-box-sprite h3 {
  font-size: 1.9em;
  margin-top: 25px;
}

.info-box-sprite .pokeball-icon {
  width: 220px;
  top: 47px;
  right: 14px;
}

.modal-sprite-container {
  width: 170px;
  height: 170px;
  margin-top: 15px;
}

.modal-sprite-container .pokemon-sprite {
  width: 170px;
}

.info-text {
  color: white;
  font-weight: 500;
  /* text-shadow: rgb(0, 0, 0) 1px 0px 0px, rgb(0, 0, 0) 0.540302px 0.841471px 0px,
    rgb(0, 0, 0) -0.416147px 0.909297px 0px,
    rgb(0, 0, 0) -0.989992px 0.14112px 0px,
    rgb(0, 0, 0) -0.653644px -0.756802px 0px,
    rgb(0, 0, 0) 0.283662px -0.958924px 0px,
    rgb(0, 0, 0) 0.96017px -0.279415px 0px; */
}

.pokemon-genera {
  margin-top: 7px;
  font-size: 1.1rem;
}

.info-box-sprite .type-list {
  margin-top: 16px;
}

.pokemon-dimensions {
  display: flex;
  width: 100%;
  justify-content: space-evenly;
  margin-top: 15px;
}
/* ... */

